--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hakimrazalan/enginemailer-laravel-driver",
+    "name": "hakimrazalan/enginemailer-laravel",
     "description": "EngineMailer Laravel Driver",
     "type": "library",
     "require": {
@@ -13,7 +13,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "HakimRazalan\\EngineMailerDriver\\": "src/"
+            "HakimRazalan\\EngineMailerLaravel\\": "src/"
         }
     },
     "authors": [
@@ -26,5 +26,8 @@
         "allow-plugins": {
             "php-http/discovery": true
         }
+    },
+    "require-dev": {
+        "rector/rector": "^2.0"
     }
 }
